# Multi-Agent

./: README.md  graph.py  guardrails.py  llm.py  main.py  project.md  pyproject.toml  render.yaml  state.py
agents/: FundamentalAgent.py  ManagerAgent.py  MarketAgent.py  PortfolioAgent.py  RiskAgent.py  __init__.py
nodes/: conditionalNode.py  crew.py  criticNode.py  handoff_service.py
