[project]
name = "project-3-autonomous-investment-strategy-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "langgraph==1.0.0",
    "python-dotenv==1.1.1",
    "crewai==1.8.1",
    "crewai[azure-ai-inference]",
    "langfuse>=4.7.1",
    "tokenizers==0.20.1",
]
