[project]
name = "project-3-autonomous-investment-strategy-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "langgraph==1.0.0",
    "python-dotenv==1.1.1",
    "crewai[azure-ai-inference]==1.8.1",
    "langfuse>=4.7.1",
    "langchain>=0.3.0",
    "openai>=1.0.0",
    "langchain-core>=0.3.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "nodes"]